bitbybit/tests/no_compile/invalid_bit_pos/invalid_bits_pos_u7.stderr
error: bitfield!: Field field requires 8 bits, but only has (7)
 --> tests/no_compile/invalid_bit_pos/invalid_bits_pos_u7.rs:5:5
  |
5 |     #[bits(6..=7, rw)]
  |     ^^^^^^^^^^^^^^^^^^
